add docker Container: Data Visualizer

--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,40 @@
 body
-  background-color: #333333
+  background-color: #333
   color: white
+
+div
+  h3
+    text-align: center
+    display: block
+
+div
+  h3 h4
+    color: blue
+
+ul
+  margin: 0
+  padding: 0
+  position: fixed
+  top: 0
+  width: 100%
+  background-color: #756
+  overflow: hidden
+  text-align: center
+  a
+    color: white
+    text-align: center
+    display: block
+    padding-bottom: 0
+    text-decoration: none
+
+.placeholder
+  padding-bottom: 14px
+.box
+  float: left
+  background: #333
+  box-sizing: border-box
+  padding-left: 60px
+  padding-bottom: 30px
+  &:last-child
+    margin-right: 0
 
